Alteracao no body e no logo

--- a/agendamento.html
+++ b/agendamento.html
@@ -10,7 +10,7 @@
 <body>
     <!-- CABEÇALHO -->
     <header>
-        <a class="logo" href="">DH Barbearia</a>
+        <a class="logo" href="index.html">DH Barbearia</a>
         <!-- navegação -->
         <nav>
             <ul class="menu">
